[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Explosion.gd" type="Script" id=1]
[ext_resource path="res://sounds/Explosion 5.wav" type="AudioStream" id=2]
[ext_resource path="res://sprites/fast-splosion.png" type="Texture" id=3]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0.503632, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.387179, 0.605128, 0.752294 )
colors = PoolColorArray( 1, 0.854902, 0.588235, 1, 1, 0, 0, 1, 0.192157, 0.164706, 0.164706, 1 )

[sub_resource type="CircleShape2D" id=3]
radius = 112.786

[sub_resource type="Animation" id=4]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("Fast:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fast:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Fast:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "splode"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Fast:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 6, 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fast:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.996078, 1, 0.576471, 1 ), Color( 0.976471, 0.396078, 0.396078, 1 ), Color( 0.486275, 0.486275, 0.486275, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Fast:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Explosion" type="Node2D"]
scale = Vector2( 1.15, 1.15 )
script = ExtResource( 1 )

[node name="Parts" type="Node2D" parent="."]
scale = Vector2( 1.15, 1.15 )

[node name="Particles" type="CPUParticles2D" parent="Parts"]
scale = Vector2( 3.8, 3.8 )
emitting = false
amount = 200
lifetime = 0.55
one_shot = true
preprocess = 0.3
explosiveness = 0.73
fract_delta = false
emission_shape = 1
emission_sphere_radius = 2.0
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 1.0
angular_velocity = 252.97
angular_velocity_random = 1.0
scale_amount = 8.0
scale_amount_random = 0.5
scale_amount_curve = SubResource( 1 )
color = Color( 1, 0.992157, 0.980392, 1 )
color_ramp = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = 15.0
autoplay = true

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 0.45
autostart = true

[node name="Fast" type="Sprite" parent="."]
position = Vector2( 2.60869, 3.91304 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 3 )

[node name="Fast_Mations" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/splode = SubResource( 5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
